# localfit

./: .aider.chat.history.md  .gitignore  README.md  demo.tape  index.html  pyproject.toml  setup_app.py
.github/workflows/: test.yml
assets/: localfit.icns
docker/: Dockerfile  runpod.yaml  start.sh
landing/: index.html
scripts/: build_dmg.sh
src/localfit/: __init__.py  __main__.py  backends.py  bench.py  cli.py  cloud.py  daemon.py  dashboard.py  home_menu.py  image_models.py  image_server.py  launchagent.py  makeitfit.py  matcher.py  mcp_image.py  menubar.py  model_benchmarks.py  prerequisites.py  proxy.py  remote.py  run_menu.py  safe_config.py  tui.py  wizard.py
tests/: test_localfit.py
