[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localfit"
version = "1.2.9"
description = "Will it fit? GPU toolkit for AI models — MLX + GGUF + Cloud in one menu."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Anass Kartit" }]
keywords = ["localfit", "gpu", "vram", "llm", "gguf", "benchmark", "llama.cpp", "ollama", "unsloth", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
tui = ["textual>=1.0"]
download = ["huggingface_hub>=0.20"]
app = ["rumps>=0.4", "py2app>=0.28"]
all = ["textual>=1.0", "huggingface_hub>=0.20", "rumps>=0.4"]

[project.scripts]
localfit = "localfit.cli:main"

[project.gui-scripts]
localfit-menubar = "localfit.menubar:main"

[project.urls]
Homepage = "https://github.com/AnassKartit/localfit"
Repository = "https://github.com/AnassKartit/localfit"

[tool.hatch.build.targets.wheel]
packages = ["src/localfit"]
